Fix Footer Link Padding
Noticed that the thank you sponsors link in the footer had extra padding which makes it sit weirdly in the sentence (looks like it has extra spaces on either side).

This fixes it, in theory, by only adding padding to the list item links (the navigation bar items).

Edited via GitHub, untested.

--- a/FrontEnd/styles/header_footer.scss
+++ b/FrontEnd/styles/header_footer.scss
@@ -22,7 +22,6 @@ footer {
     background-color: var(--header-background);
 
     a {
-        padding: 3px;
         font-size: 15px;
         font-weight: 600;
         color: var(--header-link-text);
@@ -44,6 +43,10 @@ footer {
             li {
                 margin: 0 5px;
                 list-style: none;
+                
+                a {
+                    padding: 3px;
+                }
             }
         }
     }
